# ssccpp

./: .gitignore  Cargo.toml  LICENSE.txt  Readme.md  test.txt
src/: lib.rs  main.rs
test_root/from/: a.conf
test_root/from/B/: b.conf
