[package]
name = "ssccpp"
version = "0.1.0"
authors = ["CARCANO Arthur <arthur.carcano@inria.fr>"]
edition = "2018"
license = "MIT"
description = "SSCCPP, the Simple Switch Cases Configuration PreProcessor"
repository = "https://github.com/krtab/ssccpp"
readme = "Readme.md"

[dependencies]
clap = '2'
hostname = '0.1.5'
regex = "1"

[[bin]]
name = 'ssccpp'
path = 'src/main.rs'

[[bin]]
name = 'ssccpp-batch'
path = 'src/bin/ssccpp-batch.rs'
